# unbridge-client

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AUDITORS.md  AUDIT_SCOPE.md  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MAINNET.md  Makefile  OPERATORS.md  README.md  ROADMAP.md  SECURITY.md  manifesto.md  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
circuits/: README.md  pool_deposit.circom  pool_tx.circom  spend_auth.circom
circuits/verifying-keys/: deposit_verifying_key.rs  pool_verifying_key.rs  withdraw_verifying_key.rs
client/: README.md  package.json
crates/confidential-vault/: Cargo.toml  README.md
crates/confidential-vault/src/: main.rs
crates/frost/: Cargo.toml  README.md
crates/frost-verify-check/: Cargo.toml  README.md
crates/frost-verify-check/src/: data.rs  errors.rs  groth16.rs  main.rs
crates/frost/src/: dkg.rs  errors.rs  group.rs  key.rs  lib.rs  nonce.rs  signing.rs
crates/pool-note/: Cargo.toml  README.md
crates/pool-note/src/: denomination.rs  encryption.rs  errors.rs  field.rs  lib.rs  note.rs  nullifier.rs
crates/pool-recovery/: Cargo.toml  README.md
crates/pool-recovery/src/: decode.rs  errors.rs  lib.rs  rpc.rs  scan.rs  state.rs
docs/: api-reference.mdx  architecture.mdx  compliance-design.md  design-decisions.md  economics.mdx  errors.mdx  faq.mdx  getting-started.mdx  how-it-works.mdx  index.mdx  integration.mdx  security.mdx  verify.mdx
engine/: .dockerignore  .gitignore  AUDIT.md  DEPLOY.md  Dockerfile.railway  Dockerfile.signerd  HARDENING.md  SECURITY.md  clippy.toml  deploy.sh  fly.toml
engine/coordinator/: Cargo.toml  README.md  m7-demo.sh
engine/coordinator/src/: aptos_tx.rs  eth_demo.rs  main.rs  net_demo.rs  signerd.rs
engine/kobe/: Cargo.toml
engine/kobe-ecdsa/: .gitignore  README.md  btc.go  btc_test.go  eth.go  go.mod  go.sum  persist.go  tron.go  tron_test.go  tss.go  tss_test.go
engine/kobe-ecdsa/cmd/btc-send/: main.go
engine/kobe-ecdsa/cmd/btc-tx/: main.go
engine/kobe-ecdsa/cmd/ecdsa_demo/: main.go
engine/kobe-ecdsa/cmd/eth-tx/: main.go
engine/kobe-ecdsa/cmd/fault-verify/: main.go
engine/kobe-ecdsa/cmd/frost-operator/: main.go
engine/kobe-ecdsa/cmd/gen-operators/: main.go
engine/kobe-ecdsa/cmd/kobe-ecdsa/: main.go
engine/kobe-ecdsa/cmd/operator/: main.go
engine/kobe-ecdsa/cmd/tron-send/: main.go
engine/kobe-ecdsa/cmd/verify-sig/: main.go
engine/kobe-ecdsa/net/: adversarial_test.go  demo.sh  fault.go  fault_demo.sh  fault_test.go  frost.go  frost_demo.sh  frost_fault_demo.sh  frost_ffi.go  frost_test.go  network.go  network_test.go  operator.go  pki.go  protocol.go  share.go  share_test.go  tls_test.go  tlsconf.go  transport.go  transport_test.go  util.go
engine/kobe-wasm/: .gitignore  Cargo.toml  Dockerfile.signer  README.md  demo.html  dkg-test.mjs  fly.signer.toml  network-signer.mjs  serve.mjs  split-demo.html  split-test.mjs  test.mjs
engine/kobe-wasm-secp/: Cargo.toml  README.md
engine/kobe-wasm-secp/src/: lib.rs
engine/kobe-wasm/src/: lib.rs
engine/kobe/examples/: custody_demo.rs  frost_demo.rs
engine/kobe/src/: ffi.rs  lib.rs
engine/kobe/tests/: frost_verify.rs  serialization.rs  user_mandatory.rs
engine/programs/distin/: Cargo.toml
engine/programs/distin/src/: errors.rs  lib.rs  state.rs
engine/tests-litesvm/: Cargo.toml
engine/tests-litesvm/tests/: custody_key.rs  slash_attested.rs  wallet_gate.rs
examples/: Cargo.toml  README.md
product/: README.md
product/scripts/: bootstrap.devnet.mjs  bootstrap.mjs  devnet.json
product/web/: .vercelignore  next.config.ts  package-lock.json  package.json
product/web/.claude/: launch.json
product/web/app/: distin.ts  globals.css  layout.tsx  page.tsx
programs/zkcash/: README.md
programs/zkcash/idl/: zkcash.json
web/: .vercelignore  LIGHTHOUSE.md  next.config.ts  package-lock.json  package.json
web/.claude/: launch.json
web/app/: AmbientAudio.tsx  BgScene.tsx  HeroScene.tsx  UnicornBg.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
web/app/app/: distin.ts  eth.ts  page.tsx
web/app/docs/: Mermaid.tsx  content.ts  page.tsx
web/public/: starry_distin.json
