[workspace]
members = [
    "programs/*",
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["Unbridge core"]
license = "MIT"
repository = "https://github.com/unbridgeDev/unbridge"
homepage = "https://unbridge.dev"
readme = "README.md"
rust-version = "1.78"
description = "One Solana account, every chain, no bridges. On-chain threshold-signature coordination — FROST Ed25519 for SVM/Cosmos, GG20 secp256k1 for BTC/EVM/Tron."
keywords = ["solana", "anchor", "threshold-signature", "mpc", "web3"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2"
solana-sdk = "=1.18.26"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
