[package]
name = "pool-note"
version = "0.1.0"
edition = "2021"
description = "Note primitives for the Unbridge shielded pool: Poseidon commitment, nullifier derivation, view-key encryption, and boundary-denomination validation."
license = "MIT"
repository = "https://github.com/unbridgeDev/unbridge"
homepage = "https://unbridge.dev"
readme = "README.md"

[lib]
name = "pool_note"
path = "src/lib.rs"

[dependencies]
light-poseidon = "0.3"
ark-bn254 = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
thiserror = "1"
rand_core = "0.6"
chacha20poly1305 = "0.10"
zeroize = "1.7"

[dev-dependencies]
hex = "0.4"
