# coordinator — Distin's off-chain MPC coordinator/operator service (demo).
#
# Standalone host crate (own [workspace], NOT a member of engine/Cargo.toml), so
# its solana-client / solana-sdk dependency tree never perturbs the SBF program
# build. It depends on `kobe` (the real FROST signer) by path for the crypto.
#
# Milestone 3: drive the FULL end-to-end loop on localnet —
#   read a SigningRequest on-chain  ->  run real FROST MPC over its message_hash
#   with N simulated operators  ->  submit the participation receipts and the
#   REAL aggregate signature back on-chain (aggregate_and_emit)  ->  independently
#   verify the on-chain-recorded signature against the group key.
[workspace]

[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
kobe = { path = "../kobe" }
solana-client = "2.1"
solana-sdk = "2.1"
solana-account-decoder = "2.1"
spl-token-2022 = "6"
spl-associated-token-account = "6"
sha2 = "0.10"
# Independent standard Ed25519 verifier for the on-chain-recorded signature.
ed25519-dalek = "2.1"
# Independent secp256k1 ECDSA recovery + keccak for the EVM (GG20) path, so the
# coordinator recovers the ETH address from the ON-CHAIN bytes WITHOUT trusting
# the Go signer or go-ethereum. RustCrypto's k256/sha3, audited, pure-Rust.
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Encryption-at-rest for key material (opt-in via DISTIN_KEY_PASSPHRASE):
# Argon2id derives the file key, ChaCha20-Poly1305 authenticates. Audited RustCrypto.
chacha20poly1305 = "0.10"
argon2 = "0.5"
getrandom = "0.2"

[[bin]]
name = "demo"
path = "src/main.rs"

[[bin]]
name = "eth-demo"
path = "src/eth_demo.rs"

# Milestone 7: the on-chain request drives the M6 NETWORKED operator processes
# (3 separate PIDs over authenticated TCP) end to end, ETH-verified on localnet.
[[bin]]
name = "net-demo"
path = "src/net_demo.rs"

[[bin]]
name = "signerd"
path = "src/signerd.rs"

# Aptos (FROST Ed25519) real-transaction vertical: sign a real BCS RawTransaction.
[[bin]]
name = "aptos-tx"
path = "src/aptos_tx.rs"
