[package]
name = "kobe-wasm-secp"
version = "0.1.0"
edition = "2021"
publish = false
[workspace]
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
frost-secp256k1-tr = "3.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
hex = "0.4"
[profile.release]
opt-level = "s"
