[package]
name = "kobe-wasm"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone (not in the engine workspace): the wasm target pulls getrandom's js
# backend and wasm-bindgen, which must not perturb the on-chain / daemon builds.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
frost-ed25519 = "3.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
hex = "0.4"

[profile.release]
opt-level = "s"
