# Standalone integration-test crate for the on-chain `distin` program.
#
# It is DELIBERATELY outside the program's workspace (`engine/Cargo.toml`) and
# carries its own `Cargo.lock`, so the litesvm / solana-sdk 2.x test dependency
# tree never perturbs the lock that `cargo-build-sbf` uses to build the program.
# The test loads the already-built `target/deploy/distin.so` into an in-process
# SVM and drives real transactions against it.
# Empty `[workspace]` makes this its own root, fully detached from
# engine/Cargo.toml (the SBF program workspace) and its lock.
[workspace]

[package]
name = "distin-litesvm-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
litesvm = "0.6"
solana-sdk = "2"
spl-token-2022 = "6"
spl-pod = "0.5"
ed25519-dalek = "2"
sha2 = "0.10"

[[test]]
name = "slash_attested"
path = "tests/slash_attested.rs"

[[test]]
name = "wallet_gate"
path = "tests/wallet_gate.rs"
