[package]
name = "distin"
description = "One Solana account natively signs for every chain, no bridges: on-chain threshold-signature coordination."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "distin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
